{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Camera",
            "id": "15fc5428-7310-41d1-a88a-51266a0b7d54",
            "actions": [
                {
                    "name": "TouchMove",
                    "type": "PassThrough",
                    "id": "8fb2ac17-9c06-4335-a5df-da5a47453201",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyboardMove",
                    "type": "Value",
                    "id": "2286c5b9-55d6-45e9-b737-cb3a24875f20",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger0Position",
                    "type": "Value",
                    "id": "7a25fb9d-04b7-4a13-a1bb-f31b166f51a7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger1Position",
                    "type": "Value",
                    "id": "121f09a3-6653-47d3-8dc7-92cc82bc33dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger1Touch",
                    "type": "Button",
                    "id": "c8960340-0aa2-4c0b-bfef-ca45223cb125",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseZoom",
                    "type": "Value",
                    "id": "05bceb2f-711d-46c7-9750-023bcb8837c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3c8186d-c087-434b-8e39-d9dcd1b8ef5b",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f8bde969-153b-4130-9768-2819e7d542cf",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9e8653d6-69da-47ac-9a37-66363fbd8290",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ea169828-e6c4-4019-8e7a-f0a3b9fb0a82",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "00877318-9063-4c73-a3bf-009170c75493",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bb51ecbb-42a9-4d35-92a7-cb86d9743094",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e419455f-b72d-4525-92d6-1e11f7dbf152",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "Finger0Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1ff2d70-8053-4e28-b18a-c7837b77368d",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "Finger1Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd17e4ad-0a37-418e-afcf-4151c506b095",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d0fb10b-4571-47d2-bb1e-f4db503da953",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Light",
            "id": "2d5271c1-4998-4e84-ae0e-c78f6dd01f88",
            "actions": [
                {
                    "name": "SwitchGlobalLight",
                    "type": "PassThrough",
                    "id": "d36242b9-879f-4657-bc2a-43cb406020e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed23f7d0-82ff-4b49-b232-59e08a7191de",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SwitchGlobalLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6258b85e-d271-4546-9f04-436c23bb8633",
                    "path": "<Touchscreen>/Press",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "SwitchGlobalLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}